--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Data Analysis/Visualization by David Lepzelter</h1>
+<center><h1>Data Analysis/Visualization by David Lepzelter</h1></center>
 <table style="width:100%">
 <tr><td><a href="crimesagainstkids.html"><img src="crimesagainstkids.gif" alt="Crimes against children in Chicago" /></a></td><td><a href="mortality.html"><img src="mortality_swede.gif" alt="Mortality in Sweden based on birth year" /></a></td></tr>
 </table>
