Revert "Replace master branch with page content via GitHub"
This reverts commit 53a276443d53194b9d0c391607fccad3ed6996a5.

--- a/index.html
+++ b/index.html
@@ -1,61 +1,10 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
-
-  <title>Dlepzelter.GitHub.io</title>
-  <meta name="description" content="Website for prettier display of github projects (under construction)">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
-</head>
-
 <body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Dlepzelter.GitHub.io</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">Website for prettier display of github projects (under construction)</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/dlepzelter" class="code">View Dlepzelter.GitHub.io on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <p><a href="https://github.com/dlepzelter/Chicago-crimes-against-kids"><img src="https://github.com/dlepzelter/Chicago-crimes-against-kids/raw/master/crimesagainstkids.gif" alt="Crimes against children in Chicago"></a>
-<a href="https://github.com/dlepzelter/mortality"><img src="https://github.com/dlepzelter/mortality/blob/master/mortality_swede.gif" alt="Mortality in the U.S. and Sweden"></a></p>
-        </article>
-      </div>
-    </div>
-    <footer>
-      <div class="owner">
-
-      <p><a href="https://github.com/dlepzelter" class="avatar"><img src="https://avatars2.githubusercontent.com/u/8541401?v=3&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/dlepzelter">dlepzelter</a> on <a href="https://www.github.com">GitHub</a></p>
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/dlepzelter/dlepzelter.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/dlepzelter/dlepzelter.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
+<center><h1>Data Analysis/Visualization by David Lepzelter</h1></center>
+<table style="width:100%">
+<tr><td><a href="crimesagainstkids.html"><img src="crimesagainstkids.gif" alt="Crimes against children in Chicago" /></a></td><td><a href="mortality.html"><img src="mortality_swede.gif" alt="Mortality in Sweden based on birth year" /></a></td></tr>
+</table>
+<p></p>
 </body>
 </html>
